# unittest

Desktop/coding/: ap9470_h3_q1.cpp  ap9470_h3_q2.cpp  ap9470_h3_q3.cpp  ap9470_h3_q4.cpp  ap9470_h3_q5.cpp  ap9470_h3_q6.cpp  ap9470_h4_q1.cpp  ap9470_h4_q2.cpp  ap9470_h4_q3.cpp  ap9470_h4_q5.cpp  areaofacircle.cpp  asciivalue.cpp  castingcharliterals.cpp  daystraveled.cpp  equations.cpp  functionint.cpp  game.cpp  game2.cpp  guessinggame.cpp  helloworld.cpp  howlongworkedtogether.cpp  howmanycoins.cpp  howmuchmoney.cpp  lowercasetouppercase.cpp  sequence.cpp  test.cpp  totaldiscount.cpp  triangle.cpp
Desktop/coding/testing/: CMakeLists.txt  Example.cpp  Example.hpp
Desktop/coding/testing/test/: CMakeLists.txt  ExampleTests.cpp
